<resources>
    <string name="app_name">Habit Rabbit</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for menu items -->
    <string name="action_edit_project">Edit Project</string>
    <string name="action_new_project">New Project</string>
    <string name="action_delete_project">Delete Project</string>

    <!-- Strings for Days of Week -->
    <string name="day_sunday">Su</string>
    <string name="day_monday">Mo</string>
    <string name="day_tuesday">Tu</string>
    <string name="day_wednesday">We</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">Fr</string>
    <string name="day_saturday">Sa</string>
    <string name="day_today">Today</string>
    <string name="day_any">Anyday</string>
    <string name="day_every">Everyday</string>

    <!-- Strings for MainActivity -->
    <string name="main_project_pracice">Practice:</string>
    <string name="main_project_repetition">Repetition:</string>
    <string name="main_project_progress">Progress:</string>
    <string name="main_project_interval">Average Interval:</string>
    <string name="main_project_get_started">Let\'s Get Started!</string>
    <string name="main_project_add_project_message">First, let\'s add a project.</string>
    <string name="main_project_add_project_action">Add Project</string>
    <string name="main_project_settings_action">Change Settings</string>
    <string name="confirm_delete_project_title">Confirm Delete?</string>
    <string name="confirm_delete_project_text">This cannot be undone. Do you really want to delete this project?</string>
    <string name="no_alarm">No Alarm</string>
    <string name="placeholder_project_title">Project Title</string>
    <string name="placeholder_practice_days">Practice Days</string>
    <string name="placeholder_progress_percent">80%</string>
    <string name="placeholder_progress_count">40 / 50</string>
    <string name="placeholder_progress_interval">1.23 days</string>

    <!-- Strings for contentDescriptions -->
    <string name="content_update_progress">Update Progress</string>
    <string name="content_sticker">virtual sticker</string>
    <string name="content_completion_image">well done image</string>
    <string name="content_close_image">close image</string>

    <!-- Strings for AddTaskActivity -->
    <!-- unicode character for "..." = "&#8230;" -->
    <string name="edit_project_title">Project Title</string>
    <string name="edit_project_description">Describe your project&#8230;</string>
    <string name="edit_project_repetition">Number of Repetitions</string>
    <string name="day_label_string">Days to Practice</string>
    <string name="reminder_string">Reminder?</string>
    <string name="title_new_proj">New Project</string>
    <string name="title_edit_proj">Edit Project</string>

    <!-- Strings for buttons -->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>

    <!-- Strings for UpdateProgressActivity -->
    <string name="action_update_progress">Update Progress</string>
    <string name="default_alarm_time">7:00</string>

    <!-- Strings for choose sticker dialog -->
    <string name="action_delete_progress">[X] Remove this record</string>
    <string name="action_enter_PIN">Enter Parental PIN</string>
    <string name="alert_delete_confirmation">Are you sure?</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="alert_confirm_button">Yes, Delete</string>
    <string name="alert_wrongPIN_title">Incorrect PIN</string>
    <string name="alert_wrongPIN_dialog">Your rabbit sticker will have its color back when you enter the correct Parent PIN. :)</string>
    <string name="alert_samedate_title">Duplicate Dates</string>
    <string name="alert_samedate_dialog">You already have an entry on this date. Please assign this another date.</string>

    <!-- Strings for preferences -->
    <string name="change_password_title">Change Your PIN</string>
    <string name="change_password_old">Enter Old PIN</string>
    <string name="change_password_new1">Enter New PIN</string>
    <string name="change_password_new2">Confirm New PIN</string>
    <string name="pref_single_entries">Only Allow One Entry Per Day</string>
    <string name="pref_multiple_entries">Allow Multiple Entries in the Same Day</string>
    <string name="pref_multiple_entries_title">Multiple Entries?</string>
    <string name="pref_password_label">Set/change password for entry approval"</string>
    <string name="require_approval_title">Require Approval</string>
    <string name="require_approval_description">If you set a password (from the settings page), stickers will only have colors if the correct password is entered. E.g. Children logged in their own practice but require their parents to approve in order to see stickers with colors. This allows parents to supervise their child\'s daily progress.</string>
    <string name="whats_that">What\'s that?</string>
    <string name="reminder_set_password_title">Password is not set</string>
    <string name="reminder_set_password_description">Please remember to set your password from the settings page.</string>

    <!-- Strings for completion reward -->
    <string name="completion_congrats">Well Done!\nSo Proud of You!</string>
    <string name="completion_fun_action">Rotate the screen to see more images!</string>
    <string name="internet_iamge_url">https://source.unsplash.com/featured/?cute,safe-kids</string>

    <!-- Strings for notifications -->
    <string name="habit_reminder_notification_title">Time to Practice</string>
    <string name="habit_reminder_notification_body">Every repetitiion makes the task easier. Let\'s do it!</string>
    <string name="main_notification_channel_name">Primary</string>

    <!-- Strings for notifications -->
    <string name="appwidget_text">10</string>
    <string name="appwidget_label">Habits</string>
    <string name="add_widget">Add widget</string>

    <!-- Keys for Shared Preferences -->
    <string name="PREF_HABIT_DATA">PREF_HABIT_DATA</string>
    <string name="KEY_NUM_PROJECTS">KEY_NUM_PROJECTS</string>
    <string name="KEY_AVG_COMPLETION">KEY_AVG_COMPLETION</string>

    <!-- Text for test -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
