<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin_big"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_password_new1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_new1"
        android:inputType="numberPassword" >
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/et_password_new2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_new2"
        android:inputType="numberPassword" >
    </EditText>
    <EditText
        android:id="@+id/et_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_old"
        android:inputType="numberPassword" >
    </EditText>

    <Button
        android:id="@+id/btn_change_PIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button" />

</LinearLayout>